--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ body {
 }
 .fullEntryFigure {
     display: block;
-    max-height: 300px;
     clear: both;
     overflow: hidden;
 }
@@ -113,22 +112,10 @@ body {
     color: #fff;
     text-decoration: none;
 }
-.pageNavi {
+/* Navi */
+.wp-pagenavi {
+    float: none !important;
     text-align: center;
-    margin: 30px 0;
-}
-.pageNavi li {
-    display: inline-block;
-    margin: 0 3px;
-}
-.pageNavi a {
-    padding: 9px;
-    background-color: #dadada;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -o-border-radius: 4px;
-    -ms-border-radius: 4px;
-    border-radius: 4px;
 }
 /*  Lectures Styles */
 .sideCat {
